# swagger/swagger.json
@@ -14,7 +14,7 @@
         "license": {
             "name": "GNU GPL 3.0"
         },
-        "version": "1.3.2"
+        "version": "1.3.3"
     },
     "paths": {
         "/": {
@@ -54,7 +54,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/model.TaskApiRep"
+                                "$ref": "#/definitions/model.TaskApiResponse"
                             }
                         }
                     }
@@ -83,7 +83,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.TaskApiReq"
+                            "$ref": "#/definitions/model.TaskApiRequest"
                         }
                     }
                 ],
@@ -91,7 +91,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.TaskApiRep"
+                            "$ref": "#/definitions/model.TaskApiResponse"
                         }
                     }
                 }
@@ -123,7 +123,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.TaskApiRep"
+                            "$ref": "#/definitions/model.TaskApiResponse"
                         }
                     },
                     "404": {
@@ -165,7 +165,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.TaskApiReq"
+                            "$ref": "#/definitions/model.TaskApiRequest"
                         }
                     }
                 ],
@@ -173,7 +173,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.TaskApiRep"
+                            "$ref": "#/definitions/model.TaskApiResponse"
                         }
                     },
                     "404": {
@@ -319,7 +319,18 @@
         }
     },
     "definitions": {
-        "model.TaskApiRep": {
+        "model.TaskApiRequest": {
+            "type": "object",
+            "properties": {
+                "Done": {
+                    "type": "boolean"
+                },
+                "Title": {
+                    "type": "string"
+                }
+            }
+        },
+        "model.TaskApiResponse": {
             "type": "object",
             "properties": {
                 "Done": {
@@ -330,17 +341,6 @@
                 },
                 "id": {
                     "type": "integer"
-                }
-            }
-        },
-        "model.TaskApiReq": {
-            "type": "object",
-            "properties": {
-                "Done": {
-                    "type": "boolean"
-                },
-                "Title": {
-                    "type": "string"
                 }
             }
         },
